kubernetes/grassroots/stage/deployment.yaml
# genk8s:hash=2724f8f5e2d6afa896aafde0557eaf1c
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  labels:
    app: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      volumes:
      - name: grassroots-config-files
        secret:
          secretName: grassroots
      containers:
      - name: frontend
        imagePullPolicy: Always
        image: northamerica-northeast2-docker.pkg.dev/gpo-eng-stage/gpo/grassroots:0.0.1-alpha2
        workingDir: "/app/grassroots-frontend"
        command: ["pnpm", "run", "preview-local"]
        ports:
        - containerPort: 5173
          name: http
        volumeMounts:
        - name: grassroots-config-files
          mountPath: /config

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  labels:
    app: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      volumes:
      - name: grassroots-config-files
        secret:
          secretName: grassroots
      containers:
      - name: backend
        imagePullPolicy: Always
        image: northamerica-northeast2-docker.pkg.dev/gpo-eng-stage/gpo/grassroots:0.0.1-alpha2
        workingDir: "/app/grassroots-backend"
        command: ["node", "dist/Main.js"]
        ports:
        - containerPort: 3000
          name: http
        volumeMounts:
        - name: grassroots-config-files
          mountPath: /config
