kubernetes/grassroots/stage/httproute-dynamic.yaml
kind: HTTPRoute
apiVersion: gateway.networking.k8s.io/v1
metadata:
  name: grassroots
  labels:
    gateway: gpotools
spec:
  # this connects us to the gateway
  parentRefs:
  - kind: Gateway
    name: gpotools
    namespace: gateway
    sectionName: grassroots
  hostnames:
  - "grassroots.gpotoolsstage.ca"
  rules:
  - backendRefs:
    - name: frontend
      port: 5173
